<resources>
    <string name="app_name">Verbal_Reasoning_Rashmi</string>
    <string name="examples_label">Examples</string>
    <string name="play_explanation">Play explanation aloud</string>
    <string name="open_voice_settings">Open voice settings</string>
    <string name="positive_placeholder">Yes</string>
    <string name="negative_placeholder">No</string>
    <string name="answer_hint">Type your answer</string>
    <string name="submit_answer">Submit answer</string>
    <string name="restart_book">Restart full book</string>
    <string name="reset_progress">Start Again</string>
</resources>
